--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Дмитрий Куприянов - Dmitry Kupriyanov</title>
-
-    <style>
-        body {
-            margin: 0;
-            background-color : black;
-            }
-
-        div.cover {
-            background: url(/img/cover_overlay.png) no-repeat center/100% 100%, url(/img/fractal_bg.png) no-repeat center cover;
-            height: 360px;
-            }
-
-        p {
-            color: white;
-            }
-    </style>
 </head>
 <body>
+    <!--COVER-->
     <div class="cover">
+        <img class="cover" src="img/logo.png" style="opacity:70%" alt="Логотип на странице">
+        <div class="upper-left-menu">
+            <p>Tect<br>
+            Kf</p>
+        </div>
+        <div class="upper-right-menu">
+            <p>Right one</p>
+                        <p>Right one</p>
+            <p>Right one</p>
 
+        </div>
+        <h1>Universe</h1>
+        <ul>
+            <li><a class="button" href="#">Первая ссылка</a></li>
+            <li><a class="button" href="#">Первая ссылка</a></li>
+        </ul>
     </div>
-<p>Test</p>
+    <!--Main Text-->
+    <div class="main-text">
+        test 1
+    </div>
+
+    <div class="main-text-inverted">
+        Заголовок раздела
+        <br>
+        <div class="separator"></div>
+    </div>
+
+    <div class="glowing-frame">glowing text</div>
 </body>
 </html>
